--- a/index.html
+++ b/index.html
@@ -1,109 +1,110 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-     <link rel="stylesheet" href="css/estilos.css">
-    <title>Heck Shoes</title>
-  </head>
 
-  <body>
-    <div class="container-fluid">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/estilos.css">
+  <title>Heck Shoes</title>
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
 
 
-      <header>
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-            <div class="container-fluid">
+          <header>
+            <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+              <div class="container-fluid">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45" class="d-inline-block ">
-                        Heck Shoes
-                      </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="niños.html">Niños</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="mujeres.html">Mujeres</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="hombres.html">Hombres</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                  </li>
-                </ul>
+                  <a class="navbar-brand" href="index.html">
+                    <img src="Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45"
+                      class="d-inline-block ">
+                    Heck Shoes
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="niños.html">Niños</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="mujeres.html">Mujeres</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="hombres.html">Hombres</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
               </div>
+            </nav>
+          </header>
+
+
+
+          <main class="pt-4 foto">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <h1>Niños</h1>
+                  <a href="niños.html" class="btn btn-dark">Conoce mas</a>
+                  <img src="Imagenes/niño.jpg" class="d-block w-100 pt-4 img-fluid" alt="niñozapa">
+                </div>
+                <div class="carousel-item">
+                  <h1>Mujeres</h1>
+                  <a href="mujeres.html" class="btn btn-dark">Conoce mas</a>
+                  <img src="Imagenes/mujer.jpg" class="d-block w-100 pt-4 img-fluid" alt="mujerzapa">
+                </div>
+                <div class="carousel-item">
+                  <h1>Hombres</h1>
+                  <a href="hombres.html" class="btn btn-dark">Conoce mas</a>
+                  <img src="Imagenes/hombre.jpg" class="d-block w-100 pt-4 img-fluid" alt="hombrezapa">
+                </div>
+              </div>
+
+          </main>
+
+
+
+          <footer class="bg-light text-center text-lg-start">
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+              © 2022 Copyright:
+              <a class="text-dark" href="https://mdbootstrap.com/">Heck Shoes</a>
             </div>
+          </footer>
+
+
         </div>
-          </nav>    
-      </header>
-
-
-
-      <main class="pt-4 foto">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-              <h1>Niños</h1>
-              <a href="niños.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/niño.jpg"  class="d-block w-100 pt-4 img-fluid" alt="niñozapa">
-              </div>
-              <div class="carousel-item">
-                <h1>Mujeres</h1>
-                <a href="mujeres.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/mujer.jpg" class="d-block w-100 pt-4 img-fluid" alt="mujerzapa">
-              </div>
-              <div class="carousel-item">
-                <h1>Hombres</h1>
-                <a href="hombres.html" class="btn btn-dark">Conoce mas</a>
-                <img src="Imagenes/hombre.jpg" class="d-block w-100 pt-4 img-fluid" alt="hombrezapa">
-              </div>
-            </div>
-        
-      </main>
-
-
-
-      <footer class="bg-light text-center text-lg-start">
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2022 Copyright:
-          <a class="text-dark" href="https://mdbootstrap.com/">Heck Shoes</a>
-        </div>
-      </footer>
-
-
+      </div>
     </div>
-</div>
-</div>
-</div>
-    
+  </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+
+</body>
+
 </html>
