--- a/niños.html
+++ b/niños.html
@@ -1,119 +1,143 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="css/estilos.css">
-    <title>Heck Shoes</title>
-  </head>
 
-  <body>
-    <div class="container-fluid">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/estilos.css">
+  <title>Heck Shoes</title>
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
 
 
-      <header>
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-            <div class="container-fluid">
+          <header>
+            <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+              <div class="container-fluid">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45" class="d-inline-block ">
-                        Heck Shoes
-                      </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="niños.html">Niños</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="mujeres.html">Mujeres</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="hombres.html">Hombres</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                  </li>
-                </ul>
+                  <a class="navbar-brand" href="index.html">
+                    <img src="Imagenes/logozapa.webp" alt="logo zapatilla" width="60" height="45"
+                      class="d-inline-block ">
+                    Heck Shoes
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="niños.html">Niños</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="mujeres.html">Mujeres</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="hombres.html">Hombres</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
               </div>
-            </div>
-        </div>
-          </nav>
+            </nav>
           </header>
 
 
 
-<main>
-    <div class="row py-5 text-center">
-        <div class="col-md-4 movimiento" > 
-            <a href="niños.html"> <h4>Como mamá</h4> </a>        
-             <img src="Imagenes/niña1.webp" class="border border-4 border border-danger px-4 input img-fluid" alt="niña1" width="300px" height="200px">
-             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, inventore dolores? Provident deleniti voluptas adipisci eligendi nesciunt delectus ad eaque et sunt perferendis molestias non repellendus molestiae at, excepturi dolores?</p>
-        </div>            
-        <div class="col-md-4 movimiento " > 
-            <a href="niños.html"> <h4>¿Cual me pongo?</h4> </a>          
-            <img src="Imagenes/niña2.jpg" class=" border border-4 border border-danger px-4 img-fluid" alt="niña2" width="300px" height="200px">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto atque est eum accusamus animi accusantium unde assumenda commodi obcaecati fugiat ullam sint doloremque, eligendi qui sit ab officia tempora dolores?</p>
-       </div>
-       <div class="col-md-4 movimiento " >
-           <a href="niños.html"><h4>Vuelta al cole</h4></a>
-        <img src="Imagenes/niña3.jpg" class=" border border-4 border border-danger px-4 img-fluid" alt="niña3" width="300px" height="200px">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam odit cupiditate culpa veritatis rem, ducimus fugit harum ad impedit totam illo facere quasi a repellendus similique inventore itaque quos voluptates.</p>
-   </div>
-    </div>
+          <main>
+            <div class="row py-5 text-center">
+              <div class="col-md-4 movimiento">
+                <a href="niños.html">
+                  <h4>Como mamá</h4>
+                </a>
+                <img src="Imagenes/niña1.webp" class="border border-4 border border-danger px-4 input img-fluid img-fotos"
+                  alt="niña1" >
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, inventore dolores? Provident
+                  deleniti voluptas adipisci eligendi nesciunt delectus ad eaque et sunt perferendis molestias non
+                  repellendus molestiae at, excepturi dolores?</p>
+              </div>
+              <div class="col-md-4 movimiento ">
+                <a href="niños.html">
+                  <h4>¿Cual me pongo?</h4>
+                </a>
+                <img src="Imagenes/niña2.jpg" class=" border border-4 border border-danger px-4 img-fluid img-fotos" alt="niña2"
+                  >
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto atque est eum accusamus animi
+                  accusantium unde assumenda commodi obcaecati fugiat ullam sint doloremque, eligendi qui sit ab officia
+                  tempora dolores?</p>
+              </div>
+              <div class="col-md-4 movimiento ">
+                <a href="niños.html">
+                  <h4>Vuelta al cole</h4>
+                </a>
+                <img src="Imagenes/niña3.jpg" class=" border border-4 border border-danger px-4 img-fluid img-fotos" alt="niña3"
+                  >
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam odit cupiditate culpa veritatis rem,
+                  ducimus fugit harum ad impedit totam illo facere quasi a repellendus similique inventore itaque quos
+                  voluptates.</p>
+              </div>
+            </div>
 
 
-    <div class="row text center py-5 text-center">
-        <div class="col-md-6 rota">
-           <a href="niños.html"> <h3>¡¡A jugar!! </h3></a>
-         <img src="Imagenes/niño1.webp" class="d-flex justify-content-evenly border border-4 border border-primary px-4 img-fluid" alt="niño1" width="500px" height="300px">
+            <div class="row text center py-5 text-center">
+              <div class="col-md-6 rota">
+                <a href="niños.html">
+                  <h3>¡¡A jugar!! </h3>
+                </a>
+                <img src="Imagenes/niño1.webp"
+                  class="d-flex justify-content-evenly border border-4 border border-primary px-4 img-fluid img-fotos" alt="niño1"
+                  >
+              </div>
+              <div class="col-md-6 rota ">
+                <a href="niños.html">
+                  <h3>Con toda la onda</h3>
+                </a>
+                <img src="Imagenes/niño2.jpg"
+                  class="d-flex justify-content-evenly border border-4 border border-primary px-4 img-fluid img-fotos" alt="niño2"
+                  >
+              </div>
+            </div>
+          </main>
+
+
+
+          <footer class="bg-light text-center text-lg-start">
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+              © 2022 Copyright:
+              <a class="text-dark" href="https://mdbootstrap.com/">Heck Shoes</a>
+            </div>
+          </footer>
+
+
         </div>
-        <div class="col-md-6 rota ">
-           <a href="niños.html"> <h3>Con toda la onda</h3></a>
-        <img src="Imagenes/niño2.jpg" class="d-flex justify-content-evenly border border-4 border border-primary px-4 img-fluid" alt="niño2" width="500px" height="300px">
-        </div>
+      </div>
     </div>
-</main>
+  </div>
 
 
 
-<footer class="bg-light text-center text-lg-start">
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2022 Copyright:
-      <a class="text-dark" href="https://mdbootstrap.com/">Heck Shoes</a>
-    </div>
-  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
-      
-    </div>
-</div>
-</div>
-</div>
-    
 
-    <!-- Optional JavaScript; choose one of the two! -->
+</body>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-  </body>
 </html>
